# viso

./: .gitignore  .gitmessage  CLA.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  PLAN.md  README.md  build.rs  clippy.toml  deny.toml  justfile  rustfmt.toml
.cargo/: config.toml
.claude/: api_surface.md
.githooks/: commit-msg
.github/: CODEOWNERS
.github/workflows/: ci.yml  cla.yml  docs.yml  pages.yml  release.yml
assets/shaders/: backbone_tube.wgsl  bloom_blur.wgsl  bloom_threshold.wgsl  camera_spheres.wgsl  capsule_impostor.wgsl  composite.wgsl  compute_rmf.wgsl  cone_impostor.wgsl  cylinder_bonds.wgsl  data_driven_triangles.wgsl  fxaa.wgsl  geometry_spheres.wgsl  instanced_triangles.wgsl  instanced_tube.wgsl  picking.wgsl  picking_capsule.wgsl  sphere_impostor.wgsl  ssao.wgsl  ssao_blur.wgsl  xyz_spheres.wgsl
assets/shaders/modules/: camera.wgsl  fullscreen.wgsl  sdf.wgsl  volume.wgsl
assets/shaders/raster/impostor/: capsule.wgsl  cone.wgsl  sphere.wgsl
assets/shaders/raster/mesh/: backbone_tube.wgsl
assets/shaders/screen/: bloom_threshold.wgsl  bloom_upsample.wgsl  composite.wgsl  fxaa.wgsl  ssao.wgsl  ssao_blur.wgsl
assets/shaders/utility/: picking_capsule.wgsl  picking_mesh.wgsl
benches/: animation_bench.rs
crates/.claude/: settings.local.json
crates/viso-ui/: Cargo.toml  index.html  style.css  tailwind-input.css  tailwind.config.js
crates/viso-ui/src/: bridge.rs  load_ui.rs  main.rs  scene_ui.rs  schema_ui.rs
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md
docs/src/architecture/: overview.md
docs/src/configuration/: color-modes.md  options-and-presets.md
docs/src/deep-dives/: animation-system.md  background-processing.md  camera-system.md  picking-and-selection.md  rendering-pipeline.md
docs/src/getting-started/: building-and-running.md  quick-start.md
docs/src/integration/: dynamic-updates.md  engine-lifecycle.md  handling-input.md  render-loop.md  scene-management.md
src/: atom_renderer.rs  backbone_renderer.rs  ball_and_stick_renderer.rs  band_renderer.rs  bloom.rs  capsule_sidechain_renderer.rs  composite.rs  cylinder_renderer.rs  dynamic_buffer.rs  easing.rs  engine.rs  error.rs  frame_timing.rs  fxaa.rs  gpu_picking.rs  lib.rs  lighting.rs  main.rs  nucleic_acid_renderer.rs  options.rs  picking.rs  protein_data.rs  pull_renderer.rs  render_context.rs  ribbon_renderer.rs  scene.rs  scene_processor.rs  secondary_structure.rs  shader_composer.rs  sphere_renderer.rs  ssao.rs  text_renderer.rs  tube_renderer.rs  viewer.rs  web.rs
src/animation/: animator.rs  easing.rs  interpolation.rs  mod.rs  preferences.rs  runner.rs  sidechain_state.rs  state.rs  timeline.rs  transition.rs
src/animation/animator/: controller.rs  mod.rs  runner.rs  sidechain.rs  state.rs
src/animation/behaviors/: backbone_then_expand.rs  cascade.rs  collapse_expand.rs  mod.rs  smooth.rs  snap.rs  state.rs  traits.rs
src/app/: channel.rs  mod.rs  viewer.rs
src/app/gui/: panel.rs  webview.rs
src/app/web/: mod.rs
src/assets/models/: 5a1a.cif
src/bridge/: dispatch.rs  mod.rs
src/camera/: controller.rs  core.rs  fit.rs  frustum.rs  input.rs  input_state.rs  mod.rs
src/engine/: accessors.rs  animation.rs  annotations.rs  assembly_consumer.rs  bootstrap.rs  command.rs  constraint.rs  construction.rs  core.rs  culling.rs  density.rs  density_store.rs  dynamic_buffer.rs  entity.rs  entity_store.rs  entity_view.rs  focus.rs  gpu_init.rs  input.rs  mod.rs  options.rs  options_apply.rs  overlays.rs  picking_system.rs  positions.rs  queries.rs  renderers.rs  residue_color.rs  scene.rs  scene_data.rs  scene_management.rs  scene_processor.rs  scene_state.rs  scene_sync.rs  shader_composer.rs  sidechain_cache.rs  surface.rs  surface_regen.rs  sync.rs  test_fixtures.rs  (+2 more)
src/engine/sync/: mod.rs  pipeline.rs
src/gpu/: adobe_cube_lut.rs  dynamic_buffer.rs  lighting.rs  mod.rs  pipeline_helpers.rs  render_context.rs  residue_color.rs  shader_composer.rs  texture.rs
src/gui/: mod.rs  panel.rs  webview.rs
src/input/: event.rs  keyboard.rs  mod.rs  mouse.rs  processor.rs
src/options/: appearance.rs  camera.rs  colors.rs  debug.rs  display.rs  geometry.rs  keybindings.rs  lighting.rs  mod.rs  overrides.rs  palette.rs  post_processing.rs  score_color.rs
src/picking/: mod.rs  picking.rs  picking_state.rs
src/renderer/: draw_context.rs  entity_topology.rs  gpu_pipeline.rs  mesh.rs  mod.rs  pipeline_util.rs
src/renderer/geometry/: ball_and_stick.rs  band.rs  bond.rs  mod.rs  nucleic_acid.rs  pull.rs  sheet_adjust.rs  sidechain.rs
src/renderer/geometry/backbone/: arrows.rs  curve.rs  index.rs  mesh.rs  mod.rs  path.rs  profile.rs  (+2 more)
src/renderer/impostor/: capsule.rs  cone.rs  mod.rs  polygon.rs  sphere.rs
src/renderer/molecular/: ball_and_stick.rs  band.rs  capsule_instance.rs  capsule_sidechain.rs  draw_context.rs  mesh_pass.rs  mod.rs  nucleic_acid.rs  pull.rs  ribbon.rs  tube.rs
src/renderer/picking/: mod.rs  pick_map.rs  pipeline.rs  state.rs  utils.rs
src/renderer/pipeline/: mesh_concat.rs  mesh_gen.rs  mod.rs  prepared.rs  processor.rs
src/renderer/postprocess/: bloom.rs  composite.rs  fxaa.rs  mod.rs  post_process.rs  screen_pass.rs  ssao.rs
src/scene/: entity.rs  entity_data.rs  mesh_concat.rs  mesh_gen.rs  mod.rs  prepared.rs  processor.rs
src/shaders/modules/: camera.wgsl  constants.wgsl  depth.wgsl  highlight.wgsl  impostor_types.wgsl  lighting.wgsl  pbr.wgsl  ray.wgsl  raymarch.wgsl  selection.wgsl  shade.wgsl
src/shaders/screen/: bloom_blur.wgsl  bloom_threshold.wgsl  composite.wgsl  fxaa.wgsl  ssao.wgsl  ssao_blur.wgsl
src/shaders/utility/: picking_capsule.wgsl  picking_sphere.wgsl
src/util/: bond_topology.rs  easing.rs  frame_timing.rs  geom.rs  hash.rs  lighting.rs  lut_adobe_cube.rs  mod.rs  options.rs  score_color.rs  sheet_adjust.rs  trajectory.rs
src/util/lut_adobe_cube/: error.rs  mod.rs  parse.rs  tests.rs  types.rs
src/web/: input.rs  mod.rs
testdata/lut/: minimal_n2_metadata.cube
web/: .gitignore  coi-serviceworker.js  index.html  serve.py
xtask/: Cargo.toml
xtask/src/: main.rs
(+29 files in other folders)
