[workspace]
members = ["crates/viso-ui"]

[package]
name = "viso"
version = "0.1.0"
edition = "2021"
description = "GPU-accelerated 3D protein visualization engine"
authors = ["Andreas Petrides <apetrides32@gmail.com>"]
license = "AGPL-3.0-only"
repository = "https://github.com/petridecus/viso"
readme = "README.md"
keywords = ["protein", "visualization", "molecular", "wgpu", "3d"]
categories = ["graphics", "rendering", "science", "visualization"]
exclude = ["gallery/", "assets/", "docs/", ".github/"]

[features]
default = ["binary"]
binary = ["gui", "dep:env_logger", "dep:ureq"]
viewer = ["dep:winit", "dep:pollster"]
gui = ["viewer", "dep:wry", "dep:rust-embed", "dep:mime_guess"]

[dependencies]
wgpu = { version = "26.0", features = ["naga-ir"] }
winit = { version = "0.30.12", optional = true }
pollster = { version = "0.4.0", optional = true }
bytemuck = "1.24.0"
rand = "0.9.2"
glam = "0.30.10"

# Serialization for options/presets
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
schemars = "1"

# Logging
log = "0.4"
env_logger = { version = "0.11", optional = true }

# HTTP client for downloading structures from RCSB
ureq = { version = "3", optional = true }

# Embedded webview for GUI options panel
wry = { version = "0.50", optional = true }

# Embed viso-ui WASM bundle at compile time
rust-embed = { version = "8", optional = true }
mime_guess = { version = "2", optional = true }

# Time utilities (wasm-compatible std::time replacement)
web-time = "1"

# Lock-free triple buffering for scene processor results
triple_buffer = "8"

# Half-precision floats for BRDF LUT texture (Rg16Float)
half = "2"
naga_oil = "0.19"
naga = "26"

foldit-conv = { git = "https://github.com/petridecus/foldit-conv" }

[[bin]]
name = "viso"
path = "src/main.rs"
required-features = ["binary"]

[dev-dependencies]
