[package]
name = "viso-xtask"
version = "0.1.0"
edition = "2021"
description = "Build tasks for the viso workspace"
license-file = "../LICENSE.md"
repository = "https://github.com/petridecus/viso"
readme = "../README.md"
keywords = ["protein", "visualization"]
categories = ["development-tools::build-utils"]
publish = false

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
