[package]
name = "viso-ui"
version = "0.1.0"
edition = "2021"
description = "Dioxus web UI for the viso rendering engine"
authors = ["Andreas Petrides <apetrides32@gmail.com>"]
license = "AGPL-3.0-only"
repository = "https://github.com/petridecus/viso"
readme = "../../README.md"
keywords = ["protein", "visualization", "ui", "dioxus", "wasm"]
categories = ["gui", "web-programming", "visualization"]

[dependencies]
dioxus = { version = "0.6", features = ["web"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# JS interop for wry IPC bridge
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "CustomEvent",
    "CustomEventInit",
    "EventTarget",
    "Element",
    "HtmlElement",
    "Document",
] }


[package.metadata.cargo-machete]
ignored = ["serde"]
